src/objects/System_Values__c.object
<CustomObject>
    <description>Holds some core system values which are referenced by other parts of the application.</description>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SysFieldName__c</fullName>
        <inlineHelpText>Define the field name</inlineHelpText>
        <label>SysFieldName</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SysFieldValue__c</fullName>
        <inlineHelpText>Enter the value for this field</inlineHelpText>
        <label>SysFieldValue</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System Values</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SysFieldName__c</columns>
        <columns>SysFieldValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>System Values ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>